applications/video-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-proxy
spec:
  selector:
    app: video-proxy
  ports:
    - name: http
      port: 80
      targetPort: 8080
